# ROLL

./: .gitignore  README.md  requirements_common.txt  setup.cfg
.github/workflows/: daily-stats.yml
docs_roll/: package.json  sidebars.js
docs_roll/docs/Overview/: start.mdx
docs_roll/docs/简体中文/使用指南/agentic/: agentic_engineer_practice.md
examples/config/: step_envs.yaml  traj_envs.yaml
examples/deepseekv3-agentic/: agentic_rollout_frozen_lake.yaml  deepseek_evaluate.sh  run_agentic_rollout_pipeline_frozen_lake.sh
examples/qwen2.5-0.5B-agentic/: agent_val_frozen_lake_grpo.yaml  run_agentic_pipeline_frozen_lake.sh
mcore_adapter/src/mcore_adapter/models/: __init__.py  model_factory.py  model_utils.py
mcore_adapter/src/mcore_adapter/models/converter/: convert_utils.py
mcore_adapter/src/mcore_adapter/models/qwen2_5_vl/: modeling_qwen2_5_vl.py
mcore_adapter/src/mcore_adapter/models/qwen2_vl/: modeling_qwen2_vl.py
mcore_adapter/src/mcore_adapter/trainer/: trainer.py
roll/agentic/env/: __init__.py
roll/distributed/scheduler/: log_monitor.py  resource_manager.py
roll/distributed/strategy/: deepspeed_strategy.py  megatron_strategy.py
roll/pipeline/: base_worker.py
roll/pipeline/agentic/: agentic_config.py  agentic_pipeline.py  agentic_rollout_pipeline.py
roll/pipeline/agentic/env_manager/: step_concat_env_manager.py  step_env_manager.py  traj_env_manager.py
roll/pipeline/rlvr/: rlvr_config.py  utils.py
roll/utils/: functionals.py
roll/utils/context_parallel/: monkey_patch.py
visualize/: visualize_rollouts.py
(+3 files in other folders)
