[metadata]
name = roll
version = 0.0.0
description = roll package
# author, url, etc. 可按需补充

[options]
# 指定源码根目录（这里保持根目录为包根）
packages = find:
install_requires =
    # 如果有依赖可以写在这里，也可以用 requirements files
    # example-package>=1.0

[options.packages.find]
# 在项目根查找包，但只包含 roll 及其子包
where = .
include =
    roll*
exclude =
    tests*